--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "react-dom": "18.2.0",
     "swr": "^2.0.3",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "sass": "^1.58.2"
   }
 }
